[package]
name = "cbmp-rs"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "cbmp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3.3"
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
